--- a/a4a/static/index.html
+++ b/a4a/static/index.html
@@ -66,7 +66,23 @@
       font-size: 0.7rem;
       color: #64748b;
       padding: 0 4px;
+      display: flex;
+      align-items: center;
+      gap: 6px;
     }
+
+    .agent-badge {
+      font-size: 0.65rem;
+      background: #0f172a;
+      border: 1px solid #334155;
+      color: #38bdf8;
+      padding: 1px 7px;
+      border-radius: 999px;
+      white-space: nowrap;
+      transition: opacity 0.2s;
+    }
+
+    .agent-badge:empty { display: none; }
 
     .bubble {
       max-width: min(680px, 90%);
@@ -187,7 +203,7 @@
       width: fit-content;
     }
 
-    .thinking span {
+    .thinking span.dot {
       width: 8px;
       height: 8px;
       border-radius: 50%;
@@ -195,8 +211,14 @@
       animation: pulse 1.2s ease-in-out infinite;
     }
 
-    .thinking span:nth-child(2) { animation-delay: 0.2s; }
-    .thinking span:nth-child(3) { animation-delay: 0.4s; }
+    .thinking span.dot:nth-child(2) { animation-delay: 0.2s; }
+    .thinking span.dot:nth-child(3) { animation-delay: 0.4s; }
+
+    .thinking-agent {
+      font-size: 0.7rem;
+      color: #38bdf8;
+      margin-left: 4px;
+    }
 
     @keyframes pulse {
       0%, 80%, 100% { opacity: 0.2; transform: scale(0.8); }
@@ -298,6 +320,27 @@
     const send = document.getElementById("send");
     let emptyEl = document.getElementById("empty");
 
+    // ページロード時にセッションIDを生成（タブ内で会話を継続）
+    const SESSION_ID = "ws_" + Date.now() + "_" + Math.random().toString(36).slice(2);
+
+    // エージェント名の表示ラベルマッピング
+    const AGENT_LABELS = {
+      "remote_agent":               "コーディネーター",
+      "coordinator_agent":          "コーディネーター",
+      "okinawa_soba_search_agent":  "沖縄そば検索",
+      "okinawa_soba_recipe_agent":  "そばレシピ",
+      "okinawa_soba_recommender":   "そばおすすめ",
+      "okinawa_express_bus_agent":  "バス情報",
+      "okinawa_beach_recommender":  "ビーチ案内",
+      "angel_agent":                "エンジェル",
+      "palm_tree_info_agent":       "ヤシの木情報",
+      "agent_4_agent":              "A4A",
+    };
+
+    function agentLabel(name) {
+      return AGENT_LABELS[name] || name;
+    }
+
     // Auto-resize textarea
     input.addEventListener("input", () => {
       input.style.height = "auto";
@@ -318,7 +361,17 @@
 
       const label = document.createElement("div");
       label.className = "label";
-      label.textContent = role === "user" ? "あなた" : "エージェント";
+
+      const labelText = document.createElement("span");
+      labelText.textContent = role === "user" ? "あなた" : "エージェント";
+      label.appendChild(labelText);
+
+      let badge = null;
+      if (role === "agent") {
+        badge = document.createElement("span");
+        badge.className = "agent-badge";
+        label.appendChild(badge);
+      }
 
       const bubble = document.createElement("div");
       bubble.className = `bubble ${role}`;
@@ -328,7 +381,7 @@
       wrap.appendChild(bubble);
       chat.appendChild(wrap);
       chat.scrollTop = chat.scrollHeight;
-      return bubble;
+      return { bubble, badge };
     }
 
     function addThinking() {
@@ -341,13 +394,14 @@
 
       const dots = document.createElement("div");
       dots.className = "thinking";
-      dots.innerHTML = "<span></span><span></span><span></span>";
+      dots.innerHTML = `<span class="dot"></span><span class="dot"></span><span class="dot"></span>
+                        <span class="thinking-agent"></span>`;
 
       wrap.appendChild(label);
       wrap.appendChild(dots);
       chat.appendChild(wrap);
       chat.scrollTop = chat.scrollHeight;
-      return wrap;
+      return { wrap, thinkingAgent: dots.querySelector(".thinking-agent") };
     }
 
     form.addEventListener("submit", async (e) => {
@@ -367,15 +421,16 @@
       input.style.height = "auto";
       send.disabled = true;
 
-      const thinkingEl = addThinking();
+      const { wrap: thinkingWrap, thinkingAgent } = addThinking();
       let agentBubble = null;
+      let agentBadge = null;
       let rawText = "";
 
       try {
         const res = await fetch("/query", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ query }),
+          body: JSON.stringify({ query, session_id: SESSION_ID }),
         });
 
         if (!res.ok) throw new Error(`HTTP ${res.status}`);
@@ -390,18 +445,37 @@
 
           buffer += decoder.decode(value, { stream: true });
           const lines = buffer.split("\n");
-          buffer = lines.pop(); // keep incomplete last line
+          buffer = lines.pop();
 
           for (const line of lines) {
             if (!line.startsWith("data: ")) continue;
             const data = line.slice(6);
             if (data === "[DONE]") break;
 
+            // エージェント切り替えイベント
+            if (data.startsWith("[AGENT:") && data.endsWith("]")) {
+              const name = data.slice(7, -1);
+              const label = agentLabel(name);
+              // thinking 中はドットの横に表示
+              thinkingAgent.textContent = label;
+              // バブルが既にあればバッジを更新
+              if (agentBadge) agentBadge.textContent = label;
+              continue;
+            }
+
+            // 初回テキスト: thinking → bubble に切り替え
             if (!agentBubble) {
-              thinkingEl.remove();
-              agentBubble = addBubble("agent");
+              thinkingWrap.remove();
+              const result = addBubble("agent");
+              agentBubble = result.bubble;
+              agentBadge  = result.badge;
+              // thinking 中に判明したエージェント名を引き継ぐ
+              if (agentBadge && thinkingAgent.textContent) {
+                agentBadge.textContent = thinkingAgent.textContent;
+              }
               agentBubble.classList.add("streaming");
             }
+
             // ストリーミング中は生テキストで表示
             rawText += data + "\n";
             agentBubble.textContent = rawText;
@@ -409,8 +483,8 @@
           }
         }
       } catch (err) {
-        thinkingEl.remove();
-        const errBubble = addBubble("agent");
+        thinkingWrap.remove();
+        const { bubble: errBubble } = addBubble("agent");
         errBubble.textContent = "エラーが発生しました: " + err.message;
         errBubble.style.color = "#f87171";
       } finally {
